# libOSCpp

./: AUTHORS  BUGS  ChangeLog  Doxyfile  Makefile  Makefile.am  Makefile.in  NEWS  README  config.h  config.h.in  config.status  configure  configure.ac  libOSC++.spec  libtool
debian/: README.Debian  changelog  control  copyright  libosc++0-dev.doc-base  libosc++0-dev.docs  rules
doc/: Manual.abw  UserManual.doc  UserManual.html
examples/: Makefile  Makefile.am  Makefile.in  README  simpleTCPClient  simpleTCPClient.cc  simpleTCPServer  simpleTCPServer.cc  simpleUDPClient  simpleUDPClient.cc  simpleUDPServer  simpleUDPServer.cc
examples/.deps/: simpleTCPClient.Po  simpleTCPServer.Po  simpleUDPClient.Po  simpleUDPServer.Po
include/: InetMaster.h  InetOSC.h  InetTCPMaster.h  InetTCPSlave.h  InetTransport.h  InetTransportManager.h  InetUDPMaster.h  InetUDPReplier.h  InputStream.h  Makefile  Makefile.am  Makefile.in  NullTransmit.h  OSC-c-types.h  OSC-string-help.h  OSCAssociativeNamespace.h  OSCBundleHandler.h  OSCCCallable.h  OSCCallable.h  OSCCountCallable.h  OSCDocumenter.h  OSCHierarchicalNamespace.h  OSCLister.h  OSCNamespace.h  OSCNamespaceItem.h  OSCPacker.h  OSCPrintCallable.h  OSCProcessor.h  OSCReplyCallable.h  OSCTypeReturner.h  OSCUnpacker.h  Processor.h  Service.h  ServiceManager.h  Transmit.h  c_callbacks.h  hyperswap.h  int64_t.h  oscmatch.h  socklen_t.h  (+1 more)
src/: InetOSC.cc  InetOSC.lo  InetTCPMaster.cc  InetTCPMaster.lo  InetTCPSlave.cc  InetTCPSlave.lo  InetTransportManager.cc  InetTransportManager.lo  InetUDPMaster.cc  InetUDPMaster.lo  InetUDPReplier.cc  InetUDPReplier.lo  Makefile  Makefile.am  Makefile.in  NullTransmit.cc  NullTransmit.lo  OSC-string-help.c  OSC-string-help.lo  OSCAssociativeNamespace.cc  OSCAssociativeNamespace.lo  OSCCCallable.cc  OSCCCallable.lo  OSCCallable.cc  OSCCallable.lo  OSCHierarchicalNamespace.cc  OSCHierarchicalNamespace.lo  OSCLister.cc  OSCLister.lo  OSCNamespaceItem.cc  OSCNamespaceItem.lo  OSCPacker.cc  OSCPacker.lo  OSCProcessor.cc  OSCProcessor.lo  OSCUnpacker.cc  OSCUnpacker.lo  Processor.cc  Processor.lo  Transmit.cc  (+4 more)
src/.deps/: InetOSC.Plo  InetTCPMaster.Plo  InetTCPSlave.Plo  InetTransportManager.Plo  InetUDPMaster.Plo  InetUDPReplier.Plo  NullTransmit.Plo  OSC-string-help.Plo  OSCAssociativeNamespace.Plo  OSCCCallable.Plo  OSCCallable.Plo  OSCHierarchicalNamespace.Plo  OSCLister.Plo  OSCNamespaceItem.Plo  OSCPacker.Plo  OSCProcessor.Plo  OSCUnpacker.Plo  Processor.Plo  Transmit.Plo  oscmatch.Plo
src/.libs/: libOSC++.la  libOSC++.lai
tests/: Makefile  Makefile.am  Makefile.in  OSCFunctionCallable.h  README  mikmod-server.cc  newnames.cc  oscmatch.cc  sampleplayer.c  sampleplayer.h  test-oscmatch.cc
