SUBDIRS = src include examples tests
EXTRA_DIST = BUGS Doxyfile
EXTRA_DIST += doc/Manual.abw doc/UserManual.doc doc/UserManual.html
EXTRA_DIST += debian/README.Debian debian/changelog debian/compat debian/control debian/copyright debian/libosc++0-dev.doc-base debian/libosc++0-dev.docs debian/libosc++0.docs debian/libosc++0.substvars debian/rules
EXTRA_DIST += libOSC++.spec

#dist-hook:
#	rm -rf `find $(distdir)/filters -name CVS`
#	rm -rf `find $(distdir)/filters -name .deps`
#	rm -rf `find $(distdir)/filters -name Makefile`
