libOSC__includedir = $(includedir)/OSC++

libOSC__include_HEADERS = \
	InputStream.h \
	NullTransmit.h \
	OSC-c-types.h \
	OSC-string-help.h \
	OSCAssociativeNamespace.h \
	OSCBundleHandler.h \
	OSCCCallable.h \
	OSCCallable.h \
	OSCCountCallable.h \
	OSCDocumenter.h \
	OSCLister.h \
	OSCNamespace.h \
	OSCNamespaceItem.h \
	OSCHierarchicalNamespace.h \
	OSCPacker.h \
	OSCPrintCallable.h \
	OSCProcessor.h \
	OSCReplyCallable.h \
	OSCTypeReturner.h \
	OSCUnpacker.h \
	Processor.h \
	Transmit.h \
	Service.h \
	ServiceManager.h \
	InetTransportManager.h \
	InetTransport.h \
	InetMaster.h \
	InetOSC.h \
	InetTCPMaster.h \
	InetTCPSlave.h \
	InetUDPMaster.h \
	InetUDPReplier.h \
	c_callbacks.h \
	standards.h \
	int64_t.h \
	socklen_t.h \
	hyperswap.h \
	oscmatch.h

